user form fix, better readability for black theme disabled fields

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -376,4 +376,5 @@ mat-expansion-panel {
   background: var(--bg-card) !important;
   border-top: 1px solid var(--border-color);
   padding: 16px 4px 4px 4px !important;
+  color: black !important;
 }
